--- a/inspections/templates/inspections/notifications/notification_form.html
+++ b/inspections/templates/inspections/notifications/notification_form.html
@@ -16,7 +16,7 @@
                         <table class="table table-bordered">
                             <tr>
                                 <th width="30%">رقم المعاينة:</th>
-                                <td>#{{ inspection.id }}</td>
+                                <td>{{ inspection.inspection_code }}</td>
                             </tr>
                             <tr>
                                 <th>العميل:</th>
