--- a/installations/templates/installations/orders_modal_total.html
+++ b/installations/templates/installations/orders_modal_total.html
@@ -196,7 +196,7 @@
                                             </a>
                                             <button type="button" 
                                                     class="btn btn-success btn-sm update-status"
-                                                    data-installation-id="{{ installation.id }}"
+                                                    data-installation-id="{{ installation.installation_code }}"
                                                     data-status="in_installation">
                                                 <i class="fas fa-play"></i> بدء التركيب
                                             </button>
